--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/lovable-uploads/5e1aea5c-66ab-4413-85bb-a9a9e2c423d2.png" />
+    <link rel="icon" type="image/png" href="/lovable-uploads/logo.jpeg" />
   </head>
 
   <body>
